--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,6 @@
 [versions]
 agp = "8.7.2"
-kotlin = "1.9.24"
+kotlin = "2.1.0"
 coreKtx = "1.13.0"
 junit = "4.13.2"
 junitVersion = "1.1.5"
@@ -16,8 +16,10 @@ coroutines-core = "1.3.0"
 coroutines-android = "1.7.1"
 activity = "1.8.0"
 constraintlayout = "2.1.4"
+swiperefreshlayout = "1.1.0"
 
 [libraries]
+swiperefreshlayout = { group = "androidx.swiperefreshlayout", name = "swiperefreshlayout", version.ref = "swiperefreshlayout"}
 recyclerview = { group = "androidx.recyclerview", name = "recyclerview", version.ref = "recyclerview"}
 lifecycle-extension = { group = "androidx.lifecycle", name = "lifecycle-extensions", version.ref = "lifecycle"}
 lifecycle-livedata = { group = "androidx.lifecycle", name = "lifecycle-livedata-ktx", version.ref = "livecycle_version"}
